<resources>
    <string name="app_name">MovieSelector</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Cancel">Cancel</string>
    <string name="Register">Register</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="Email">Email</string>
    <string name="Major">Major</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="Logout">Logout</string>
    <string name="title_activity_welcome">welcome</string>
    <string name="title_activity_profile">Profile</string>
    <string name="Back">Back</string>
    <string name="MyProfile">MyProfile</string>
    <string name="SearchMovie">Search Movie</string>
    <string name="title_activity_seach">Seach</string>
    <string name="MovieSelector">Movie Selector</string>
    <string name="Search">Search</string>
    <string name="movieName">movieName</string>
    <string-array name="major_names">
        <item>Select</item>
        <item>CS</item>
        <item>BME</item>
        <item>ME</item>
        <item>CompE</item>
        <item>CM</item>
        <item>EA</item>
        <item>EE</item>
    </string-array>
    <string-array name="kind">
        <item>Select</item>
        <item>New DVD</item>
        <item>In Thearters</item>
        <item>You May Like</item>
    </string-array>
    <string name="title_activity_rating">Rating</string>
    <string name="Comment">Comments</string>
    <string name="Synopsis">Synopsis</string>
    <string name="title_activity_get_your_recommendation">GetYourRecommendation</string>
    <string name="title_activity_comment">Comment</string>
    <string name="CommentIt">Comment it!</string>
    <string name="title_activity_edit">Edit</string>
    <string name="Submit">Submit</string>
    <string name="GoldenMovie">Golden Movie</string>
    <string name="Home">Home</string>
    <string name="title_activity_admin">Admin</string>
    <string name="admin">Hello Administration</string>
    <string name="title_activity_user_page">UserPage</string>
    <string name="status">Status</string>
    <string name="profile">Profile</string>
    <string name="title_activity_animation_page">animationPage</string>
</resources>
