<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Username" />
    <EditText
        android:id="@+id/etUsername"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"
        android:singleLine="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Password"/>
    <EditText
        android:id="@+id/etPassword"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:singleLine="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FirstName"/>
    <EditText
        android:id="@+id/etFirstName"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textPersonName"
        android:singleLine="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LastName"/>
    <EditText
        android:id="@+id/etLastName"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textPersonName"
        android:singleLine="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Email"/>
    <EditText
        android:id="@+id/etEmail"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textEmailAddress"
        android:singleLine="true"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Major" />
        <Spinner
            android:id="@+id/etMajor"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Submit"
        android:onClick="register"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cancel"
        android:onClick="cancel"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
