<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:layout_margin="5dp"
    android:background="#fbff4f"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Username" />
    <TextView
        android:id="@+id/etUsername"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="30dp"
        android:inputType="text"
        android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FirstName"/>
    <TextView
        android:id="@+id/etFirstName"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="30dp"
        android:inputType="textPersonName"
        android:singleLine="true"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LastName"/>
    <TextView
        android:id="@+id/etLastName"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="30dp"
        android:inputType="textPersonName"
        android:singleLine="true"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Email"/>
    <TextView
        android:id="@+id/etEmail"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="30dp"
        android:inputType="textEmailAddress"
        android:singleLine="true"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Major" />
        <TextView
            android:id="@+id/etMajor"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="30dp"
            android:inputType="text"
            android:singleLine="true"/>
    </LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:paddingTop="50dp">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit"
        android:id="@+id/btnEdit"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp">
        <Button
            android:id="@+id/btnMain"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/Home"
            android:onClick="profile" />
        <Button
            android:id="@+id/btnSearch"
            android:layout_width="142dp"
            android:layout_height="wrap_content"
            android:text="@string/SearchMovie"
            android:onClick="movie" />
        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Logout"
            android:onClick="logout" />
    </LinearLayout>

</LinearLayout>
