<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:layout_margin="5dp"
    android:background="#fbff4f"
    android:orientation="vertical">


    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Logout"
        android:onClick="logout"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/btnSearch" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:text="@string/SearchMovie"
        android:onClick="movie"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/btnProfile" />

    <Button
        android:id="@+id/btnProfile"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:onClick="profile"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
