<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="100dp"
    android:background="#fbff4f"
android:orientation="vertical">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <!--android:layout_marginLeft="20dp">-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Username"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
        <EditText
            android:id="@+id/etUsername"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:singleLine="true">
        </EditText>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Password"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <EditText android:layout_width="201dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:singleLine="true"
            android:id="@+id/etPassword" />
    </LinearLayout>
    <Button
        android:id="@+id/btnLogin"
        android:layout_marginTop="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:onClick="login"
        android:tag="#ff4183ff"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal" />
    <Button
        android:id="@+id/btnCancel"
        android:layout_marginTop="20dp"
        android:text="@string/Cancel"
        android:onClick="cancel"
        android:tag="#ff4183ff"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"/>
</LinearLayout>
