<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.lingyi.movieselector.UserPage"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Username" />
        <TextView
            android:id="@+id/etUsername"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="30dp"
            android:inputType="text"
            android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FirstName"/>
        <TextView
            android:id="@+id/etFirstName"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="30dp"
            android:inputType="textPersonName"
            android:singleLine="true"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LastName"/>
        <TextView
            android:id="@+id/etLastName"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="30dp"
            android:inputType="textPersonName"
            android:singleLine="true"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Email"/>
        <TextView
            android:id="@+id/etEmail"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="30dp"
            android:inputType="textEmailAddress"
            android:singleLine="true"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Major" />
        <TextView
            android:id="@+id/etMajor"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="30dp"
            android:inputType="text"
            android:singleLine="true"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status" />
        <TextView
            android:id="@+id/etStatus"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="30dp"
            android:inputType="text"
            android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="170dp">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:text="Ban"
            android:id="@+id/btnBan"/>
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:text="lock"
            android:id="@+id/btnLock"/>
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:text="Back"
            android:id="@+id/btnBack" />

    </LinearLayout>


</LinearLayout>
